tests/03-conflict.stderr
error[E0119]: conflicting implementations of trait `Default` for type `Foo`
 --> tests/03-conflict.rs:3:20
  |
3 | #[derive(Defaults, Default)]
  |          --------  ^^^^^^^ conflicting implementation for `Foo`
  |          |
  |          first implementation here
  |
  = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)
